modified:   Pipfile 	modified:   databall/database_builder.py

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ scikit-learn = "*"
 matplotlib = "*"
 scrapy = "*"
 nba-py = {git = "https://github.com/seemethere/nba_py.git"}
+nba-api = "*"
 
 [dev-packages]
 jupyter = "*"
