modified:   Pipfile 	modified:   Pipfile.lock 	modified:   databall/database_builder.py

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ matplotlib = "*"
 scrapy = "*"
 nba-py = {git = "https://github.com/seemethere/nba_py.git"}
 nba-api = "*"
+requests-cache = "*"
 
 [dev-packages]
 jupyter = "*"
