--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
     "nba-api>=1.5.2",
+    "pandas>=2.2.3",
     "scrapy>=2.11.2",
     "sqlmodel>=0.0.22",
 ]
