Add sqlalchemy to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "nba-api>=1.5.2",
     "pandas>=2.2.3",
     "scrapy>=2.11.2",
+    "sqlalchemy>=2.0.35",
     "sqlmodel>=0.0.22",
 ]
 
