--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,16 +35,10 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
-      - name: Set up Python
-        uses: actions/setup-python@v2.2.2
-      - name: Hash Python version
-        id: hash
-        run: echo ::set-output name=hash::$(python --version | sha256sum | cut -d' ' -f1)
-      - name: Restore cache
-        uses: actions/cache@v2.1.6
+        uses: actions/checkout@v4
+      - name: Format
+        uses: astral-sh/ruff-action@v1
         with:
-          path: ~/.cache/pre-commit
-          key: pre-commit|${{ steps.hash.outputs.hash }}|${{ hashFiles('.pre-commit-config.yaml') }}
-      - name: Run pre-commit
-        uses: pre-commit/action@v2.0.3
+          args: "format --check"
+      - name: Lint
+        uses: astral-sh/ruff-action@v1
